Updates from Overleaf

--- a/mythesis.bib
+++ b/mythesis.bib
@@ -628,7 +628,7 @@ abstract = {The Homestake Solar Neutrino Detector, based on the inverse beta-dec
 
 @misc{RENO_2020,
   author       = {Jonghee Yoo},
-  title        = {RENO},
+  title        = "{RENO}",
   month        = jun,
   year         = 2020,
   publisher    = {Zenodo},
@@ -2282,7 +2282,7 @@ abstract = {The T2K experiment is a long baseline neutrino oscillation experimen
   
 	author = {K. B. M. Mahn and Y. Nakajima and A. A. Aguilar-Arevalo and J. L. Alcaraz-Aunion and C. E. Anderson and A. O. Bazarko and S. J. Brice and B. C. Brown and L. Bugel and J. Cao and J. Catala-Perez and G. Cheng and L. Coney and J. M. Conrad and D. C. Cox and A. Curioni and R. Dharmapalan and Z. Djurcic and U. Dore and D. A. Finley and B. T. Fleming and R. Ford and A. J. Franke and F. G. Garcia and G. T. Garvey and C. Giganti and J. J. Gomez-Cadenas and J. Grange and C. Green and J. A. Green and P. Guzowski and A. Hanson and T. L. Hart and E. Hawker and Y. Hayato and K. Hiraide and W. Huelsnitz and R. Imlay and R. A. Johnson and B. J. P. Jones and G. Jover-Manas and G. Karagiorgi and P. Kasper and T. Katori and Y. K. Kobayashi and T. Kobilarcik and I. Kourbanis and S. Koutsoliotas and H. Kubo and Y. Kurimoto and E. M. Laird and S. K. Linden and J. M. Link and Y. Liu and Y. Liu and W. C. Louis and P. F. Loverre and L. Ludovici and C. Mariani and W. Marsh and S. Masuike and K. Matsuoka and C. Mauger and V. T. McGary and G. McGregor and W. Metcalf and P. D. Meyers and F. Mills and G. B. Mills and G. Mitsuka and Y. Miyachi and S. Mizugashira and J. Monroe and C. D. Moore and J. Mousseau and T. Nakaya and R. Napora and R. H. Nelson and P. Nienaber and J. A. Nowak and D. Orme and B. Osmanov and M. Otani and S. Ouedraogo and R. B. Patterson and Z. Pavlovic and D. Perevalov and C. C. Polly and E. Prebys and J. L. Raaf and H. Ray and B. P. Roe and A. D. Russell and F. Sanchez and V. Sandberg and R. Schirato and D. Schmitz and M. H. Shaevitz and T.-A. Shibata and F. C. Shoemaker and D. Smith and M. Soderberg and M. Sorel and P. Spentzouris and J. Spitz and I. Stancu and R. J. Stefanski and M. Sung and H. Takei and H. A. Tanaka and H.-K. Tanaka and M. Tanaka and R. Tayloe and I. J. Taylor and R. J. Tesarek and M. Tzanov and Y. Uchida and R. Van de Water and J. J. Walding and M. O. Wascko and D. H. White and H. B. White and M. J. Wilking and M. Yokoyama and H. J. Yang and G. P. Zeller and E. D. Zimmerman and},
   
-	title = "{Dual baseline search for muon neutrino disappearance at $0.5 \text{eV}^2 < \Delta m^2 < 40 \text{eV}^2$}",
+	title = "{Dual baseline search for muon neutrino disappearance at $0.5~\text{eV}^2 < \Delta m^2 < 40~\text{eV}^2$}",
   
 	journal = {Physical Review D}
 }
