--- a/preamble.tex
+++ b/preamble.tex
@@ -18,6 +18,8 @@
 \usepackage{lscape}
 \usetikzlibrary{angles, quotes}
 \usepackage{parskip}
+\pdfminorversion=6
+\usepackage{url}
 
 %\usepackage{indentfirst}
 \usepackage[en-GB]{datetime2}
