--- a/backmatter.tex
+++ b/backmatter.tex
@@ -6,6 +6,7 @@
 %% can be obtained from e.g. www.arxiv.org. The file mythesis.bib
 %% is derived from the source using the SPIRES Bibtex service.
 \bibliographystyle{h-physrev}
+\sloppy
 \bibliography{mythesis}
 
 
