--- a/mythesis.bib
+++ b/mythesis.bib
@@ -21,7 +21,7 @@
       primaryClass   = "hep-ph",
       reportNumber   = "FERMILAB-PUB-12-881-PPD",
       SLACcitation   = "%%CITATION = ARXIV:1204.5379;%%",
-      howpublished   = {\href{https://arxiv.org/pdf/1204.5379.pdf}{arXiv:1204.5379}}
+      howpublished   = {\href{https://arxiv.org/pdf/1204.5379.pdf}{\url{arXiv:1204.5379}}}
 }
 
 
@@ -36,7 +36,7 @@
       archivePrefix  = "arXiv",
       primaryClass   = "physics.ins-det",
       SLACcitation   = "%%CITATION = ARXIV:1503.01520;%%",
-      howpublished = {\href{https://arxiv.org/abs/1503.01520}{arXiv:1503.01520}},
+      howpublished = {\href{https://arxiv.org/abs/1503.01520}{\url{arXiv:1503.01520}}},
 }
 
 @article{SBN_paper,
@@ -114,7 +114,7 @@
 title = "{SBND Project Overview: progress, schedule and resources}",
 author = {Anne Schukraft},
 year = "2022",
-howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=26247}{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=26247}},
+url = {\url{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=26247}},
 note = "{[Accessed: Aug, 2022]}"
 }
 
@@ -122,7 +122,7 @@ note = "{[Accessed: Aug, 2022]}"
 title = "{SBND POT and Event Estimates}",
 author = {Dave Schmitz},
 year = "2022",
-howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27405}{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27405}},
+url = {\url{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27405}},
 note = "{[Accessed: Aug, 2022]}"
 }
 
@@ -153,7 +153,7 @@ year = "2018"
 @misc{Pauli_letter,
       author        = "Pauli, Wolfgang",
       title         = "{Pauli letter collection: letter to Lise Meitner}",
-      howpublished  = {\href{https://cds.cern.ch/record/83282}{https://cds.cern.ch/record/83282}},
+      url  = {\url{https://cds.cern.ch/record/83282}},
       note          = "Typed copy, [Accessed September 2021]",
 }
 
@@ -251,7 +251,7 @@ year = "2018"
       author        = "Y. Chan",
       title         = "{RESULTS FROM SNO}",
       year          = "2001",
-      howpublished  = {\href{https://www.osti.gov/servlets/purl/822831}{https://www.osti.gov/servlets/purl/822831}},
+      url  = {\url{https://www.osti.gov/servlets/purl/822831}},
       note          = "DOE Contract No. DE-AC03-76SF00098",
 }
 
@@ -1637,7 +1637,7 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 @misc{mass_hierarchy_image_2,
-howpublished = {\href{https://www-he.scphys.kyoto-u.ac.jp/member/nuICISE/Neutrino.html}{https://www-he.scphys.kyoto-u.ac.jp/member/nuICISE/Neutrino.html}},
+howpublished = {\url{https://www-he.scphys.kyoto-u.ac.jp/member/nuICISE/Neutrino.html}},
 year = {2016},
 title = "{Recent neutrino oscillation results from T2K}",
 author = "{Son Cao}"
@@ -1845,7 +1845,7 @@ year = {2016},
 month = {01},
 pages = {},
 title = {Space Charge in Ionization Detectors},
-howpublished   = { \href{https://physics.princeton.edu/examples/spacecharge.pdf}{https://physics.princeton.edu/examples/spacecharge.pdf}},
+howpublished   = {\url{https://physics.princeton.edu/examples/spacecharge.pdf}},
 note = "{[Accessed: August, 2022]}"
 }
 
@@ -2007,7 +2007,7 @@ url="https://doi.org/10.1007/978-3-319-69087-2_2"
 
 @misc{ICARUS_image,
   title = "{Schematic of the ICARUS detector.}",
-  howpublished = {\href{https://www.symmetrymagazine.org/article/sterile-neutrino-sleuths}{https://www.symmetrymagazine.org/article/sterile-neutrino-sleuths}},
+  howpublished = {\url{https://www.symmetrymagazine.org/article/sterile-neutrino-sleuths}},
   note = "{[Accessed: January, 2022]}",
   author = {{Sandbox Studio, Chicago}}
 }
@@ -2021,7 +2021,7 @@ url="https://doi.org/10.1007/978-3-319-69087-2_2"
       reportNumber  = "CERN-SPSC-2017-012, SPSC-SR-207",
       month         = "Mar",
       year          = "2017",
-      howpublished  = {\href{https://cds.cern.ch/record/2256748}{https://cds.cern.ch/record/2256748}},
+      howpublished  = {\url{https://cds.cern.ch/record/2256748}},
 }
 
 @article{light_dark_matter,
@@ -2071,7 +2071,7 @@ url="https://doi.org/10.1007/978-3-319-69087-2_2"
 % Shower reco stuff
 @misc{larsoft,
 title = "{LArSoft}",
-howpublished = {\href{https://larsoft.org/}{https://larsoft.org/}},
+howpublished = {\url{https://larsoft.org/}},
 note = "{[Accessed: July, 2022]}"
 }
 
@@ -2108,7 +2108,7 @@ note = "{[Accessed: July, 2022]}"
 title = "{SBND Recombination Study for Shower Calorimetry}",
 author = {Ed Tyley},
 year = "2019",
-howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=12033}{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=12033}},
+howpublished = {\url{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=12033}},
 note = "{[Accessed: July, 2022]}"
 }
 
@@ -2116,7 +2116,7 @@ note = "{[Accessed: July, 2022]}"
 title = "{GausHitFinder Hit Finding and Fitting}",
 author = {Tracey Usher},
 year = "2018",
-howpublished = {\href{https://indico.fnal.gov/event/18523/contributions/47921/attachments/29850/36753/GaussHitFinder121118.pdf}{https://indico.fnal.gov/event/18523/contributions/47921\\/attachments/29850/36753/GaussHitFinder121118.pdf}},
+url = {\url{https://indico.fnal.gov/event/18523/contributions/47921/attachments/29850/36753/GaussHitFinder121118.pdf}},
 note = "{[Accessed: July, 2022]}"
 }
 
@@ -2139,7 +2139,7 @@ note = "{[Accessed: July, 2022]}"
   title = "{ESTAR, PSTAR, and ASTAR: Computer Programs for Calculating Stopping-Power and Range Tables for Electrons, Protons, and Helium Ions (version 2.0.1).}",
   note = "{National Institute of Standards and Technology, Gaithersburg, MD., [Accessed: September, 2021].}",
   author = {Berger, M.J. and Coursey, J.S. and Zucker, M.A. and Chang, J.},
-  howpublished = {\href{http://physics.nist.gov/Star}{http://physics.nist.gov/Star}}
+  url = {\url{http://physics.nist.gov/Star}}
 }
 
 @article{ArgoNeuT_recombination_paper,
@@ -2321,7 +2321,7 @@ abstract = {The T2K experiment is a long baseline neutrino oscillation experimen
 
 @misc{VALOR,
    title="{The VALOR Group}",
-   howpublished = "{\href{https://valor.pp.rl.ac.uk}{https://valor.pp.rl.ac.uk}}",
+   howpublished = "{\url{https://valor.pp.rl.ac.uk}}",
    author={Andreopoulos, C and others}
 }
 
@@ -2330,7 +2330,7 @@ title = "{VALOR DUNE Joint Oscillation and Systematics Constraint Fit
 (Version 2016a v2)}",
 author = {C. Andreopoulos and others},
 year = "2016",
-howpublished = {\href{https://docs.dunescience.org/cgi-bin/private/ShowDocument?docid=1291}{DUNE DocID 1291}}
+howpublished = {\href{https://docs.dunescience.org/cgi-bin/private/ShowDocument?docid=1291}{\url{DUNE DocID 1291}}}
 }
 
 @article{GENIE,
@@ -2381,7 +2381,7 @@ howpublished = {\href{https://docs.dunescience.org/cgi-bin/private/ShowDocument?
 
 @misc{Geant4_website,
    title="{GEANT4 A Simulation Toolkit}",
-   howpublished = "{\href{https://geant4.web.cern.ch/}{https://geant4.web.cern.ch/}}",
+   howpublished = "{\url{https://geant4.web.cern.ch/}}",
    note = "{[Accessed August, 2022]}"
 }
 
@@ -2423,7 +2423,7 @@ abstract = {Geant4 is a toolkit for simulating the passage of particles through 
     year = {2020},
     keywords = {Liquid Argon, Neutrino, Sterile Neutrino, SBN, SBND, Oscillation},
     url = {https://etheses.whiterose.ac.uk/29009/},
-    howpublished = {\href{https://etheses.whiterose.ac.uk/29009/}{uk.bl.ethos.832514}},
+    howpublished = {\href{https://etheses.whiterose.ac.uk/29009/}{\url{uk.bl.ethos.832514}}},
     abstract = {The Short Baseline Neutrino (SBN) programme is an upcoming neutrino experiment situated on the Booster Neutrino Beam (BNB) at the Fermilab National Laboratory. One of the primary objectives of the SBN programme is to confirm or refute the low energy electron neutrino excess observed in previous neutrino experiments: LSND and MiniBooNE. It was postulated that this observed low energy electron neutrino excess was caused by the existence of one or more sterile neutrinos. If this is confirmed, it will alter our current understanding of physics as well as the standard model and the prescription of neutrino oscillations.
     
     To achieve this primary objective, the SBN programme will perform studies which are sensitive to electron neutrino appearances. These are carried out assuming several sterile models, in particular the 3+1 model. To undertake the physics goals of the SBN programme, three Liquid Argon Time Projection Chambers (LArTPCs) are positioned at various points along the BNB beamline. These LArTPCs are known as The Short Baseline Near Detector (SBND) (110 m), Micro Booster Neutrino Experiment (MicroBooNE) (470 m), and the Imaging Cosmic And Rare Underground Signals (ICARUS) (600 m) detector. LArTPCs provide sophisticated calorimetric and topological information to identify the energy and flavour of charged particles in neutrino interactions. For an electron neutrino excess search, it is important to reconstruct and identify the resultant electron from neutrino Charge Current (CC) events. A new framework with new methods was developed to characterise electromagnetic showers to help identify electrons from background photon showers. The new methods were then employed in an oscillated electron neutrino selection upon simulated events in the SBN detectors. The resultant event distributions were then used to perform an electron neutrino appearance sensitivity analysis using the 3 + 1 sterile model in the VALencia-Oxford-Rutherford (VALOR) neutrino oscillation fitting framework. 
@@ -2469,7 +2469,7 @@ abstract = {Geant4 is a toolkit for simulating the passage of particles through 
 title = "{SBND Oscillations Working Group Kick-off}",
 author = {Goergia Karagiorgi and Joseph Zennamo},
 year = "2022",
-howpublished = {\href{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27844}{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27844}},
+howpublished = {\url{https://sbn-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=27844}},
 note = "{[Accessed: Oct, 2022]}"
 }
 
