Updates from Overleaf

--- a/mythesis.bib
+++ b/mythesis.bib
@@ -275,7 +275,7 @@ year = "2018"
       title         = "{The Number of Neutrinos and the Z Line Shape}",
       year          = "2016",
       url           = "https://cds.cern.ch/record/2217139",
-      doi           = "$10.1142/9789814733519\_0008$",
+      doi           = "10.1142/9789814733519\_0008",
 }
 
 @book{dirac_majorana_neutrinos,
@@ -585,7 +585,7 @@ abstract = {The Homestake Solar Neutrino Detector, based on the inverse beta-dec
 	journal = {Physical Review D}
 }
 
-@misc{Reactor_On-Off_Antineutrino_Measurement_with_KamLAND,
+@article{Reactor_On-Off_Antineutrino_Measurement_with_KamLAND,
   doi = {10.48550/ARXIV.1303.4667},
   
   url = {https://arxiv.org/abs/1303.4667},
@@ -626,7 +626,7 @@ abstract = {The Homestake Solar Neutrino Detector, based on the inverse beta-dec
 	journal = {Physical Review Letters}
 }
 
-@misc{RENO_2020,
+@article{RENO_2020,
   author       = {Jonghee Yoo},
   title        = "{RENO}",
   month        = jun,
@@ -702,7 +702,7 @@ abstract = {The Homestake Solar Neutrino Detector, based on the inverse beta-dec
 	journal = {Physical Review D}
 }
 
-@misc{T2K_2020,
+@article{T2K_2020,
   author       = {Patrick Dunne},
   title        = {Latest Neutrino Oscillation Results from T2K},
   month        = jul,
@@ -820,7 +820,7 @@ abstract = {The Homestake Solar Neutrino Detector, based on the inverse beta-dec
 	journal = {Physical Review Letters}
 }
 
-@misc{First_direct_neutrino_mass_measurement_with_sub-eV_sensitivity,
+@article{First_direct_neutrino_mass_measurement_with_sub-eV_sensitivity,
   doi = {10.48550/ARXIV.2105.08533},
   
   url = {https://arxiv.org/abs/2105.08533},
@@ -838,7 +838,7 @@ abstract = {The Homestake Solar Neutrino Detector, based on the inverse beta-dec
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@misc{kamlandZen,
+@article{kamlandZen,
   doi = {10.48550/ARXIV.2203.02139},
   
   url = {https://arxiv.org/abs/2203.02139},
@@ -882,7 +882,7 @@ abstract = {The Homestake Solar Neutrino Detector, based on the inverse beta-dec
 @misc{nu_ft_v2,
     title = "{v5.2: Three-neutrino fit based on data available in November 2022}",
     
-    url = {http://www.nu-fit.org/},
+    url = {\url{http://www.nu-fit.org/}},
     
     author = {NuFit}
 }
@@ -900,7 +900,7 @@ abstract = {The Homestake Solar Neutrino Detector, based on the inverse beta-dec
     issn = {0033-068X},
     doi = {10.1143/PTP.49.652},
     url = {https://doi.org/10.1143/PTP.49.652},
-    eprint = {https://academic.oup.com/ptp/article-pdf/49/2/652/5257692/49-2-652.pdf},
+    COMMENTeprint = {https://academic.oup.com/ptp/article-pdf/49/2/652/5257692/49-2-652.pdf},
 }
 
 @article{bottom_quark_discovery,
@@ -932,7 +932,7 @@ author = {Thomas Mannel},
 abstract = {In this talk I summarize a few peculiar features of CP violation in the Standard Model, focussing on the CP violation of quarks.}
 }
 
-@misc{DUNE_design_report,
+@article{DUNE_design_report,
   doi = {10.48550/ARXIV.1601.05471},
   
   url = {https://arxiv.org/abs/1601.05471},
@@ -941,7 +941,7 @@ abstract = {In this talk I summarize a few peculiar features of CP violation in 
   
   keywords = {Instrumentation and Detectors (physics.ins-det), High Energy Physics - Experiment (hep-ex), FOS: Physical sciences, FOS: Physical sciences},
   
-  title = {Long-Baseline Neutrino Facility (LBNF) and Deep Underground Neutrino Experiment (DUNE) Conceptual Design Report Volume 1: The LBNF and DUNE Projects},
+  title = "{Long-Baseline Neutrino Facility (LBNF) and Deep Underground Neutrino Experiment (DUNE) Conceptual Design Report Volume 1: The LBNF and DUNE Projects}",
   
   publisher = {arXiv},
   
@@ -1210,7 +1210,7 @@ doi={10.1038/s41586-022-05568-2},
 url={https://doi.org/10.1038/s41586-022-05568-2}
 }
 
-@misc{Search_for_an_Excess_of_Electron_Neutrino_Interactions_in_MicroBooNE_Using_Multiple_Final_State_Topologies,
+@article{Search_for_an_Excess_of_Electron_Neutrino_Interactions_in_MicroBooNE_Using_Multiple_Final_State_Topologies,
   doi = {10.48550/ARXIV.2110.14054},
   
   url = {https://arxiv.org/abs/2110.14054},
@@ -1250,7 +1250,7 @@ url={https://doi.org/10.1038/s41586-022-05568-2}
 	journal = {Physical Review D}
 }
 
-@misc{Search_for_an_anomalous_excess_of_charged_current_nue_interactions_without_pions_in_the_final_state_with_the_MicroBooNE_experiment,
+@article{Search_for_an_anomalous_excess_of_charged_current_nue_interactions_without_pions_in_the_final_state_with_the_MicroBooNE_experiment,
   doi = {10.48550/ARXIV.2110.14065},
   
   url = {https://arxiv.org/abs/2110.14065},
@@ -1406,7 +1406,7 @@ author = {B. Achkar and R. Aleksan and M. Avenier and G. Bagieu and J. Bouchez a
 abstract = {We report on high statistics measurements of neutrino energy spectra carried out at 15, 40 and 95 meters from a 2800 Megawatt reactor, using detection modules filled with 6Li-loaded liquid scintillator. No oscillations have been observed. Exclusion zones for oscillation parameters are deduced from the observed consistency of the spectra at the three distances. The minimum excluded values of the δm2 and sin22θ parameters are 1 × 10−2eV2and 2 × 10−2 (at 90\% CL), respectively.}
 }
 
-@misc{snowmass_2021,
+@article{snowmass_2021,
   doi = {10.48550/ARXIV.2203.07323},
   
   url = {https://arxiv.org/abs/2203.07323},
@@ -1476,7 +1476,7 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
     issn = {0033-068X},
     doi = {10.1143/PTP.28.870},
     url = {https://doi.org/10.1143/PTP.28.870},
-    eprint = {https://academic.oup.com/ptp/article-pdf/28/5/870/5258750/28-5-870.pdf},
+    COMMENTeprint = {https://academic.oup.com/ptp/article-pdf/28/5/870/5258750/28-5-870.pdf},
 }
 
 @article{Atmospheric_anomaly,
@@ -1775,7 +1775,7 @@ abstract = {A measurement of the drift velocity of free electrons in liquid argo
     volume = "2022",
     pages = "083C01",
     year = "2022",
-    url = https://pdg.lbl.gov/2022/reviews/rpp2022-rev-particle-detectors-non-accel.pdf
+    url = {\url{https://pdg.lbl.gov/2022/reviews/rpp2022-rev-particle-detectors-non-accel.pdf}}
 }
 
 @article{Jaffe_model,
