Updates from Overleaf

--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -27,10 +27,12 @@ Thesis submitted in accordance with the requirements of the University of Liverp
 %% Acknowledgements
 \begin{acknowledgements}
 \begin{comment}
-  Acknowledgements\dots \\
-  Costas \\
-  VALOR group as a whole \\
-  Dom \& Ornella for the reco work
+    
+  Firstly, I would like to thank Costas for your continued support and general guidance over the past four years, but in particular, for the role you played in leading the VALOR group. Naturally, the VALOR group consists of members, past and present, many of whom have provided valuable contributions to my PhD in one way or another. 
+  
+  I would also like to thank Dom Brailsford and Ornella (and the numerous other SBN members who are associated with Larsoft and reconstruction work). You have both engaged in insightful discussions and helped in the development and validation of the EM shower reconstruction algorithms. 
+
+  Finally, the Liverpool student cohort deserves a mention and a thank you for providing an entertaining social aspect to my time here. 
 \end{comment}
 \end{acknowledgements}
 
